--- a/css/main.css
+++ b/css/main.css
@@ -395,7 +395,7 @@
       justify-content: center; 
       align-items: center;
       gap: 20px;
-      margin-top: 13px;
+      margin-top: 30px;
     }
     
     #main-flavor h3 {
@@ -834,6 +834,7 @@
       display: grid;
       grid-template-columns: repeat(3, 1fr); 
       gap: 20px;
+      margin-top: 20px;
     }
     
     .flavor-container {
@@ -1071,6 +1072,10 @@
     
     #main-flavor h3 {
       font-size: 25px;
+    }
+
+    #main-flavor {
+      margin-top: 40px;
     }
     
     #h-more-info {
