Updated some color of the image
In this commit was update the image

--- a/css/main.css
+++ b/css/main.css
@@ -144,7 +144,7 @@
     
     /* General Styles */
     h2 {
-      color: #433415;
+      color: white;
       margin-top: 20px;
       margin-bottom: 13px;
       text-align: center;
@@ -152,7 +152,7 @@
     }
     
     p {
-      color: #38393A;
+      color: white;
       text-align: center;
       padding-left: 15px;
       padding-right: 15px;
