--- a/css/grid.css
+++ b/css/grid.css
@@ -13,7 +13,7 @@ html {
 body {
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
-    background-color: #EFE3BB;
+    background-color: #433415;
 }
   
 .box {
