--- a/css/grid.css
+++ b/css/grid.css
@@ -13,7 +13,8 @@ html {
 body {
     font-family: "Josefin Sans", sans-serif;
     font-size: 18px;
-    background-color: #433415;
+    background: rgb(239,227,187);
+    background: linear-gradient(90deg, rgba(239,227,187,1) 0%, rgba(239,227,187,1) 21%, rgba(255,255,255,1) 75%, rgba(239,227,187,1) 100%);
 }
   
 .box {
