--- a/css/main.css
+++ b/css/main.css
@@ -128,14 +128,14 @@
     /* Bubble O stick on the page */
     #bubble-O {
       position: fixed;
-      bottom: 100px; 
+      top: 8%;
       right: 0;
       z-index: 1000;
       margin-right: 20px;
     }
     
     #bubble-O img {
-      max-width: 140px;
+      max-width: 130px;
       height: auto;
     }
     
@@ -775,11 +775,7 @@
         transition: all 1s ease-in-out;
         filter: drop-shadow(20px 6px 10px rgb(98, 97, 97));
       }
-    
-      #bubble-O img {
-        max-width: 180px;
-        height: auto;
-      }
+
     
     /* 1-Main Page - Tablet */
     #main-about video {
@@ -821,6 +817,16 @@
       height: auto;
       top: -8%; 
       left: 70%; 
+    }
+
+    #bubble-O {
+      top: 15%;
+    }
+
+    #bubble-O img {
+      width: 150px;
+      max-width: 180px;
+      height: auto;
     }
     
     /* 2-About Page Tablet */
@@ -977,6 +983,16 @@
       padding-top: 10px;
       padding-bottom: 10px;
     }
+
+    #bubble-O {
+      top: 20%;
+    }
+
+    #bubble-O img {
+      width: 220px;
+      height: auto;
+    }
+      
     
     #burger-con-t ul {
       display: flex; 
@@ -1034,10 +1050,6 @@
         width: 80%; /* Set the video width to 80% of its container */
         max-width: 100%; /* Ensure it does not exceed the container's width */
         height: auto; /* Maintain the aspect ratio */
-    }
-    #bubble-O img {
-      max-width: 220px;
-      height: auto;
     }
     
     #o-background {
